# httpServer

./: .gitignore  CMakeLists.txt  main.cpp  sec.txt  server.cpp  test
crawler/: main.py
pages/: index.html  invalidCreds.html  login.html  time.html
src/core/: server.cpp
src/headers/: server.h
